hphp/hack/test/typecheck/reactive/mutable_static_method1.php.exp
File "mutable_static_method1.php", line 4, characters 3-61:
__Mutable and __MaybeMutable annotations are not allowed on static methods. (Parsing[1002])
