hphp/hack/test/typecheck/reactive/mutable_static_method1.php
<?hh // partial

class A {
  <<__Rx, __Mutable>>
  public static function f(): void {
  }
}
